Changed bg colour and added DVLA api.

--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="./main.css">
     <title>MyBay</title>
 </head>
 
 <body class="flex flex-col bg-white h-full">
-    <header class="bg-custom-blue mx-auto w-full py-16">
+    <header class="bg-arcops-blue mx-auto w-full py-16">
         <p class="text-center text-white uppercase font-bold text-2xl">Search To Reserve Parking</p>
     </header>
     <content class="flex-1">
