--- a/client/index.html
+++ b/client/index.html
@@ -5,19 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/main.css">
+    <script type="text/javascript" src="/ARC-OPS/backend/app.js"></script>
+    <link rel="stylesheet" href="./main.css">
     <title>MyBay</title>
 </head>
 
 <body class="flex flex-col bg-white h-full">
     <header class="bg-custom-blue mx-auto w-full py-16">
-        <p class="text-center text-white uppercase font-bold text-2xl">Search To Reserve Parking</p>
+        <p class="text-center text-white uppercase font-bold text-2xl">Search To Reserve Parking </p>
+        <p class="text-center text-white font-bold text-xl"><a href="https://www.google.com">Welcome Henry(Log Out)</a></p>
+
+      
     </header>
     <content class="flex-1">
         <div class="flex justify-center">
-            <input type="text" class="border border-gray-500 rounded shadow-lg w-4/5 pl-10 placeholder-gray-600 -my-6"
-                placeholder="Enter Address or Place" action="POST">
+            <input id="address-finder" type="text" class="border border-gray-500 rounded shadow-lg w-4/5 pl-10 placeholder-gray-600 -my-6"
+                placeholder="Enter Address or Place" onchange="callAPI()" action="POST">
+
+
         </div>
+
+        <div>
+        </div>
+        <select id="selector" style="display: none;">
+            <option value="Pyr">Pyramidally</option>
+            <option value="Lin">In-Lines</option>
+            <option value="Sym">Symmetrically</option>
+            <option value="Nsym">Non-Symmetrically</option>
+        </select>
         <div class="mt-24 px-6 py-8 border-light-blue border-4 rounded-lg  ml-4 mr-4">
             <h6 class="font-bold text-xl">Search Begins Here</h6>
             <p class="font mt-2">Tell us your destination and when you'd like to arrive and leave</p>
