Added augemented reality.js

--- a/client/index.html
+++ b/client/index.html
@@ -146,7 +146,7 @@
                         d="M20 14.6667C17.0593 14.6667 14.6667 17.0593 14.6667 20C14.6667 22.9407 17.0593 25.3333 20 25.3333C22.9407 25.3333 25.3333 22.9407 25.3333 20C25.3333 17.0593 22.9407 14.6667 20 14.6667ZM20 24C17.794 24 16 22.206 16 20C16 17.794 17.794 16 20 16C22.206 16 24 17.794 24 20C24 22.206 22.206 24 20 24Z"
                         fill="black" />
                 </svg>
-                <h1 class="text-center">MORE</h1>
+                <a href="./arpage.html" class=""></a><h1 class="text-center">MORE</h1>
             </div>
         </div>
 
