corrected anchor tag

--- a/client/index.html
+++ b/client/index.html
@@ -135,6 +135,7 @@
                 <h1 class="text-center">ACCOUNT</h1>
             </div>
             <div class="">
+                <a href="./arpage.html" class="">
                 <svg class="mx-auto" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M5.33333 14.6667C2.39267 14.6667 0 17.0593 0 20C0 22.9407 2.39267 25.3333 5.33333 25.3333C8.274 25.3333 10.6667 22.9407 10.6667 20C10.6667 17.0593 8.274 14.6667 5.33333 14.6667ZM5.33333 24C3.12733 24 1.33333 22.206 1.33333 20C1.33333 17.794 3.12733 16 5.33333 16C7.53933 16 9.33333 17.794 9.33333 20C9.33333 22.206 7.53933 24 5.33333 24Z"
@@ -146,7 +147,8 @@
                         d="M20 14.6667C17.0593 14.6667 14.6667 17.0593 14.6667 20C14.6667 22.9407 17.0593 25.3333 20 25.3333C22.9407 25.3333 25.3333 22.9407 25.3333 20C25.3333 17.0593 22.9407 14.6667 20 14.6667ZM20 24C17.794 24 16 22.206 16 20C16 17.794 17.794 16 20 16C22.206 16 24 17.794 24 20C24 22.206 22.206 24 20 24Z"
                         fill="black" />
                 </svg>
-                <a href="./arpage.html" class=""></a><h1 class="text-center">MORE</h1>
+                <h1 class="text-center">MORE</h1>
+            </a>
             </div>
         </div>
 
