--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <header class="flex-col bg-arcops-blue mx-auto w-full py-8">
         <img src="./images/logo.png" alt="" class="mx-auto w-12">   
         <p class="text-center text-white uppercase font-bold text-2xl mt-4">Search To Reserve Parking</p>
-        <p class="text-center text-white font-semibold text-xl mt-2 pb-4"><a href="#"">Welcome Henry(Log Out)</a></p>
+        <p class="text-center text-white font-semibold text-xl mt-2 pb-4"><a href="#">Welcome Henry(Log Out)</a></p>
     </header>
     <content class="flex-1">
         <div class="flex justify-center">
